--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node --env-file=.env --watch index.js",
+    "dev": "nodemon --env-file=.env --watch index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.2",
+    "pg": "^8.11.3",
+    "sequelize": "^6.37.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
